--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
     <div class="menu-oculto">
         <ul class="lista-oculta">
-            <li class="lista-um"><a href="#list">Ver Lista do Supermercado</a></li>
+            <li class="lista-um"><a href="lista_sup.html" target="_blank">Ver Lista do Supermercado</a></li>
             <li class="lista-dois"><a href="#settings">Configurações</a></li>
             <li class="lista-tres"><a href="#faq">Dúvidas</a></li>
             <li class="lista-quatro"><a href="#logout">Sair</a></li>
@@ -23,8 +23,8 @@
     <nav>
     <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="sobre">Sobre</a></li>
-    <li><a href="Contato">Contato</a></li>
+    <li><a href="sobre.html" target="_blank">Sobre</a></li>
+    <li><a href="contato.html" target="_blank">Contato</a></li>
     </ul>
     </nav>
     </header>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="container">
-        <span class="CaixaUm"> <a href="#caixaum">
+        <span class="CaixaUm"> <a href="caixaum.html" target="_blank">
             <img src="arroz.png" alt="arroz" class="iconeUm">
             <img src="feijão.png" alt="feijão" class="iconeUm">
             <img src="óleo.png" alt="óleo" class="iconeUm">
@@ -49,7 +49,7 @@
             <img src="Açúcar.png" alt="Açúcar" class="iconeUm">
             <img src="Sal.png" alt="Sal" class="iconeUm"> <p></p>
             Cesta Básica</a></span>
-        <span class="CaixaDois"><a href="#caixadois">
+        <span class="CaixaDois"><a href="caixadois.html" target="_blank">
             <img src="bovina.png" alt="carne bovina" class="iconeUm">
             <img src="frango.png" alt="carne de frango" class="iconeUm">
             <img src="porco.png" alt="carne de porco" class="iconeUm">
@@ -57,7 +57,7 @@
             <img src="linguiça.png" alt="linguiça" class="iconeUm">
             <img src="salsicha.png" alt="salsicha" class="iconeUm"> <p></p>
             Açougue</a></span>
-        <span class="CaixaDoisMais"><a href="#caixadoismais">
+        <span class="CaixaDoisMais"><a href="caixadoismais.html" target="_blank">
             <img src="queijo.png" alt="queijo" class="iconeUm">
             <img src="leite.png" alt="leite" class="iconeUm">
             <img src="iogurte.png" alt="iogurte" class="iconeUm">
@@ -67,7 +67,7 @@
             Cesta de Lácteos</a></span>
     </div>
     <div class="container">
-        <span class="CaixaTres"><a href="#caixatres">
+        <span class="CaixaTres"><a href="caixatres.html" target="_blank">
             <img src="água.png" alt="água" class="iconeUm">
             <img src="suco.png" alt="suco" class="iconeUm">
             <img src="refrigerante.png" alt="refrigerante" class="iconeUm">
@@ -76,7 +76,7 @@
             <img src="destilado.png" alt="destilado" class="iconeUm">
             <p></p>    
             Bebidas</a></span>
-        <span class="CaixaQuatro"><a href="#caixaquatro">
+        <span class="CaixaQuatro"><a href="caixaquatro.html" target="_blank">
             <img src="chocolate.png" alt="chocolate" class="iconeUm">
             <img src="paes.png" alt="paes" class="iconeUm">
             <img src="aveia.png" alt="aveia" class="iconeUm">
@@ -86,7 +86,7 @@
             <img src="salgadinho2.png" alt="salgadinho" class="iconeUm">
             <p></p>
             Alimentos</a></span>
-        <span class="CaixaQuatroMais"><a href="#caixaquatromais">
+        <span class="CaixaQuatroMais"><a href="caixaquatromais.html" target="_blank">
             <img src="frutas geral.png" alt="geral frutas" class="iconeUm">
             <img src="frutas vermelhas.png" alt="frutas vermelhas" class="iconeUm">
             <img src="frutas cítricas.png" alt="frutas cítricas" class="iconeUm">
